test/pass/internal/match_case_return_fold.lly
enum Option[A] { Some(A) None }

define f(a: Option[integer] => integer)
{
    match a: {
        case Some(s):
            return 1
        case None:
            return 2
    }
}
