test/fail/optargs/optarg_with_generic.lly
#[
SyntaxError: Type 'A' cannot have a default value.
    from optarg_with_generic.lly:6:
]#

define f[A](a: Function(*A => A)) {  }
